added bootstrap table

--- a/Character-Creator/Pages/Index.cshtml
+++ b/Character-Creator/Pages/Index.cshtml
@@ -4,7 +4,28 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h2 class="text-center mb-5">Characters</h2>
+
+<div class="row mb-5">
+    <div class="col">
+        <a class="btn btn-primary">Create Character</a>
+    </div>
+    
 </div>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Race</th>
+        <th>Class</th>
+        <th>Level</th>
+    </tr>
+
+
+
+
+
+
+
+</table>
