Create page - character name
create button links to create page and now shows name input, user inputs name, character is created and adds to db

--- a/Character-Creator/Pages/Index.cshtml
+++ b/Character-Creator/Pages/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row mb-5">
     <div class="col">
-        <a class="btn btn-primary">Create Character</a>
+        <a class="btn btn-primary" href="/CreateCharacter">Create Character</a>
     </div>
     
 </div>
