--- a/Character-Creator/Pages/CreateCharacter.cshtml
+++ b/Character-Creator/Pages/CreateCharacter.cshtml
@@ -2,3 +2,26 @@
 @model Character_Creator.Pages.CreateCharacterModel
 @{
 }
+
+<div class="row">
+    <div class="col-md-8 ms-auto rounded boarder p-3">
+        <h2 class="text-center mb-5">New Product</h2>
+
+        <form method="post">
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">Name</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Character.Name">
+                    <span asp-validation-for="Character.Name" class="danger"></span>
+                </div>
+            </div>
+
+
+
+
+        </form>
+
+
+    </div>
+
+</div>
