--- a/Character-Creator/Pages/Index.cshtml
+++ b/Character-Creator/Pages/Index.cshtml
@@ -33,9 +33,9 @@
             <td>@character.Level</td>
             <td style="white-space:nowrap">
                 <a class="btn btn-primary btn-sm">Edit</a>
-                <span @* method="post" *@>
-                    <a class="btn btn-danger btn-sm" @* asp-page-handler="Delete" *@>Delete</a>
-                </span>
+                <form method="post" asp-page-handler="Delete" asp-route-characterID="@character.CharacterId">
+                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete @character.Name?');">Delete</button>
+                </form>
             </td>
         </tr>   
     }
