--- a/Character-Creator/Pages/Index.cshtml
+++ b/Character-Creator/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
-@* this is a view *@
+
 
 <h2 class="text-center mb-5">Characters</h2>
 
@@ -21,6 +21,7 @@
         <th>Race</th>
         <th>Class</th>
         <th>Level</th>
+        <th></th>
     </tr>
     @* model.characters references the characters list in the model behind this page *@
     @foreach(var character in Model.Characters)
@@ -32,8 +33,8 @@
             <td>@character.Class</td>
             <td>@character.Level</td>
             <td style="white-space:nowrap">
-                <a class="btn btn-primary btn-sm">Edit</a>
-                <form method="post" asp-page-handler="Delete" asp-route-characterID="@character.CharacterId">
+                <a class="btn btn-primary btn-sm" style="display: inline-block">Edit</a>
+                <form method="post" asp-page-handler="Delete" asp-route-characterID="@character.CharacterId" style="display: inline-block; margin: 0;">
                     <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete @character.Name?');">Delete</button>
                 </form>
             </td>
