--- a/Character-Creator/Pages/EditCharacter.cshtml
+++ b/Character-Creator/Pages/EditCharacter.cshtml
@@ -6,7 +6,7 @@
     <div class="col-md-8 ms-auto rounded boarder p-3">
         <h2 class="text-center mb-5">Edit Character</h2>
 
-        <form method="post">
+        @* <form method="post">
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Name</label>
                 <div class="col-sm-8">
@@ -48,7 +48,7 @@
                 </div>
             </div>
 
-        </form>
+        </form> *@
 
 
     </div>
