--- a/Character-Creator/Pages/EditCharacter.cshtml
+++ b/Character-Creator/Pages/EditCharacter.cshtml
@@ -6,7 +6,14 @@
     <div class="col-md-8 ms-auto rounded boarder p-3">
         <h2 class="text-center mb-5">Edit Character</h2>
 
-        @* <form method="post">
+        <form method="post">
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">ID</label>
+                <div class="col-sm-8">
+                    <input readonly class="form-control-plaintext" value="@Model.Character.CharacterId">
+                </div>
+            </div>
+
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Name</label>
                 <div class="col-sm-8">
@@ -48,7 +55,7 @@
                 </div>
             </div>
 
-        </form> *@
+        </form>
 
 
     </div>
